option('static', type : 'boolean', value : false, description : 'Build statically linked executable')

option('enable_alsa', type : 'combo', choices : ['auto', 'true', 'false'], description : 'ALSA audio output')
option('enable_openal', type : 'combo', choices : ['auto', 'true', 'false'], description : 'OpenAL audio output')
option('enable_libpulse', type : 'combo', choices : ['auto', 'true', 'false'], description : 'PulseAudio audio output')
option('enable_portaudio', type : 'combo', choices : ['auto', 'true', 'false'], description : 'PortAudio audio output')
option('default_audio_output', type : 'combo', choices : ['auto', 'ALSA', 'OpenAL', 'PulseAudio', 'PortAudio'], description : 'Default audio output')

option('enable_ffms2', type : 'combo', choices : ['auto', 'true', 'false'], description : 'FFMS2 video source')

option('enable_fftw3', type : 'combo', choices : ['auto', 'true', 'false'], description : 'FFTW3 support')
option('enable_hunspell', type : 'combo', choices : ['auto', 'true', 'false'], description : 'Hunspell spell checker')
option('enable_uchardet', type : 'combo', choices : ['auto', 'true', 'false'], description : 'uchardet character encoding detection')

option('system_luajit', type : 'boolean', value : false, description : 'Force using system luajit')

option('build_credit', type : 'string', value : '', description : 'Build credit shown in program title')

option('enable_update_checker', type : 'boolean', value : false, description : 'Enable the update checker')
option('update_server', type : 'string', value : 'updates.aegisub.org', description : 'Server to use for the update checker')
option('update_url', type : 'string', value : '/trunk', description : 'Base path to use for the update checker')
