SUFFIXES = .c .cpp
noinst_LIBRARIES = libfex.a
AM_CPPFLAGS = -DAEGISUB

libfex_a_SOURCES = \
	FexGenericFilter.cpp \
	FexGenericFilter_BaseFloatImage.cpp \
	FexImgPyramid.cpp \
	FexMovement.cpp \
	FexTracker.cpp \
	FexTrackerMovement.cpp \
	FexTrackingFeature.cpp

noinst_HEADERS = \
	FexGenericFilter_BaseFloatImageApply.h \
	FexGenericFilter_Contribution.h \
	FexGenericFilter_FilteringCore.h \
	FexGenericFilter_Include.h \
	FexGenericFilter_StaticFor.h \
	FexImgPyramid.h \
	FexMovement.h \
	FexTracker.h \
	FexTrackingFeature.h \
	StdAfx.h \
	tenlist.h
